objects/AdobeCampaignConfiguration__mdt.object
<CustomObject>
    <description>Metadata for all the configs related to Adobe Campaign</description>
    <fields>
        <fullName>ContentType__c</fullName>
        <description>ContentType</description>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointUrl__c</fullName>
        <description>EndPointUrl</description>
        <label>EndPointUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HttpMethodType__c</fullName>
        <description>HttpMethodType</description>
        <label>HttpMethodType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoapAction__c</fullName>
        <description>Soap Action</description>
        <label>SoapAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AdobeCampaignConfiguration</label>
    <pluralLabel>Adobe Campaign Configurations</pluralLabel>
</CustomObject>